@@ -1,3 +1,5 @@
+temporary files for attachments now have the attachment's extension.  
+
 fixed a bug where the copy button on messages wasn't getting enabled.
 
 made it so imap connections time out more quickly.
